Fixing textarea pre wrap

--- a/src/cdn/elements/fields.css
+++ b/src/cdn/elements/fields.css
@@ -284,6 +284,7 @@ input[type=number] {
 
 .field > textarea {
   padding-block-start: var(---start);
+  white-space: pre-wrap;
 }
 
 .field > textarea:focus {
